--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.btn, .btn:hover, .nav-pills > li > a, .nav-pills > li > a:hover, #about .join-now,
+.btn, .btn:hover, .nav-pills > li > a, .nav-pills > li + li > a, .nav-pills > li > a:hover, .nav-pills > li + li > a:hover, #about .join-now,
 #about-team .join-now, #about .join-now:hover,
 #about-team .join-now:hover, #about-team p > a,
 #about-team h4 > a, #about-team p > a:hover,
@@ -6,19 +6,9 @@
   transition: all 0.4s ease-in-out;
 }
 
-/********** MEDIA QUERIES **********/
-/* Extra small devices landscape (phones, less than 768px) */
-/* Small devices portrait (tablets, 768px and up) */
-/* Small devices landscape(tablets, 768px and up) */
-/* Medium devices (desktops, 992px and up) */
-/* Large devices (large desktops, 1200px and up) */
 body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
-}
-
-a:hover {
-  text-decoration: none;
 }
 
 h1 > a,
@@ -34,7 +24,7 @@ h1 > a,
 }
 
 h2 {
-  margin: 50px 0;
+  margin: 25px 0;
   font-size: 3em;
   font-weight: 300;
 }
@@ -42,6 +32,10 @@ h2 {
 h3 {
   font-size: 2em;
   font-weight: 300;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 a.thumbnail:hover,
@@ -75,7 +69,7 @@ a.thumbnail.active {
 }
 
 .container-fluid {
-  padding: 0 50px;
+  padding: 25px;
 }
 
 .jumbotron {
@@ -100,11 +94,14 @@ h1 > a:hover {
   color: white;
 }
 
-.nav-pills > li {
-  margin-right: 20px;
+.container {
   padding-bottom: 15%;
 }
-.nav-pills > li > a {
+
+.nav-pills > li, .nav-pills > li + li {
+  float: none;
+}
+.nav-pills > li > a, .nav-pills > li + li > a {
   font-size: 1.2em;
   background-color: white;
   border: 2px solid white;
@@ -113,33 +110,20 @@ h1 > a:hover {
   background-image: none;
   box-shadow: none;
   background: none;
+  text-align: center;
 }
-.nav-pills > li > a:hover {
+.nav-pills > li > a:hover, .nav-pills > li + li > a:hover {
   cursor: pointer;
   background-color: white;
   color: white;
   border-color: white;
 }
-.nav-pills > li > a:hover {
+.nav-pills > li > a:hover, .nav-pills > li + li > a:hover {
   color: #0b0b0b;
 }
 
 .jumbotron {
   margin-bottom: 0;
-}
-
-#login {
-  padding: 50px 0;
-}
-#login .col-sm-5 {
-  padding-right: 75px;
-}
-#login .col-sm-5:nth-child(2) {
-  border-left: 1px solid #0b0b0b;
-  padding-left: 75px;
-}
-#login input {
-  width: 75%;
 }
 
 #environment {
@@ -245,3 +229,65 @@ h1 > a:hover {
 #about-team h4 > a:hover {
   color: white;
 }
+
+/********** MEDIA QUERIES **********/
+/* Extra small devices landscape (phones, less than 768px) */
+@media all and (max-width: 767px) and (orientation: landscape) {
+  h1 {
+    padding-top: 5%;
+  }
+
+  .container {
+    padding-bottom: 5%;
+  }
+
+  .nav-pills {
+    padding: 0 15%;
+  }
+}
+/* Small devices portrait (tablets, 768px and up) */
+@media all and (min-width: 768px) {
+  h2 {
+    margin: 50px 0;
+  }
+
+  .container-fluid {
+    padding: 0 50px;
+  }
+
+  .nav-pills {
+    padding: 0 15%;
+  }
+
+  #login {
+    padding: 50px 0;
+  }
+  #login .col-sm-6:first-child {
+    padding-right: 75px;
+  }
+  #login .col-sm-6:first-child h2.users {
+    text-align: right;
+  }
+  #login .col-sm-6:first-child button {
+    float: right;
+  }
+  #login .col-sm-6:nth-child(2) {
+    border-left: 1px solid #0b0b0b;
+    padding-left: 75px;
+  }
+  #login input {
+    width: 75%;
+  }
+}
+/* Small devices landscape(tablets, 768px and up) */
+/* Medium devices (desktops, 992px and up) */
+@media all and (min-width: 992px) {
+  .nav-pills {
+    padding: 0;
+  }
+  .nav-pills > li, .nav-pills > li + li {
+    margin-right: 20px;
+    display: inline-block;
+  }
+}
+/* Large devices (large desktops, 1200px and up) */
