--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 #about-team .join-now, #about .join-now:hover,
 #about-team .join-now:hover, #about-team p > a,
 #about-team h4 > a, #about-team p > a:hover,
-#about-team h4 > a:hover, #about-team .btn-top, #about-team .btn-top:hover {
+#about-team h4 > a:hover, footer .btn-top, footer .btn-top:hover {
   transition: all 0.4s ease-in-out;
 }
 
@@ -155,7 +155,7 @@ a.thumbnail.active {
 
 #about {
   background: url("../images/background_about.jpg") no-repeat;
-  background-size: 150%;
+  background-size: 300%;
   background-position: 25% 50%;
 }
 
@@ -311,7 +311,12 @@ h1 > a:hover {
 #about-team h4 > a:hover {
   color: white;
 }
-#about-team .btn-top {
+
+footer {
+  width: 100%;
+  background: #382d5d;
+}
+footer .btn-top {
   font-size: 1.2em;
   background-color: white;
   border: 2px solid white;
@@ -321,22 +326,22 @@ h1 > a:hover {
   box-shadow: none;
   background: none;
   color: white;
-  margin-bottom: 50px;
+  margin: -65px 50px 0 0;
 }
-#about-team .btn-top:hover {
+footer .btn-top:hover {
   cursor: pointer;
   background-color: white;
   color: white;
   border-color: white;
 }
-#about-team .btn-top span {
+footer .btn-top span {
   content: url("../images/caret_upw.svg");
   margin-right: 20px;
 }
-#about-team .btn-top:hover {
+footer .btn-top:hover {
   color: #0b0b0b;
 }
-#about-team .btn-top:hover span {
+footer .btn-top:hover span {
   content: url("../images/caret_up.svg");
   margin-right: 20px;
 }
