--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,10 @@ a.thumbnail.active {
 .projects section > p {
   padding-right: 20px;
 }
+.projects .subsequent-heading,
+.projects .btn {
+  margin-top: 15px;
+}
 .projects #environment {
   background: none;
 }
@@ -138,6 +142,18 @@ a.thumbnail.active {
 }
 #leaf-drop aside {
   background: #ed8930;
+  padding: 20px;
+  color: white;
+}
+
+#salamander-watch header {
+  background: url("../images/header_salamander.jpg") no-repeat;
+  width: 100%;
+  height: 200px;
+  background-size: 100%;
+}
+#salamander-watch aside {
+  background: #e0a903;
   padding: 20px;
   color: white;
 }
@@ -314,6 +330,8 @@ h1 > a:hover {
 
 footer {
   width: 100%;
+  height: 75px;
+  padding-bottom: 25px;
   background: #382d5d;
 }
 footer .btn-top {
@@ -326,7 +344,7 @@ footer .btn-top {
   box-shadow: none;
   background: none;
   color: white;
-  margin: -65px 50px 0 0;
+  margin-right: 25px;
 }
 footer .btn-top:hover {
   cursor: pointer;
@@ -446,6 +464,10 @@ footer .btn-top:hover span {
   #about img,
   #about-team img {
     max-width: 100%;
+  }
+
+  footer .btn-top {
+    margin: -65px 50px 0 0;
   }
 }
 /* Small devices landscape(tablets, 768px and up) */
