--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,7 @@ $darkslategray			: #382d5d;
 $lightslategray			: #778899;
 $dodgerblue				: #2998db;
 $peruorange				: #ed8930;
+$goldenrod				: #e0a903;
 
 // ********** typography **********
 $font-url--google		: 'http://fonts.googleapis.com/css?family=Open+Sans:300,400,700';
